--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@ Que me faz sentir tão leve<br>
     </div>
     <div class="container">
       <div class="card">
-        <img src="imag/img1.JPG"> <!-- Aqui você pode adicionar uma imagem -->
+        <img src="img1.JPG"> <!-- Aqui você pode adicionar uma imagem -->
       </div>
       <div class="card">
-        <img src="imag/img2.JPG"> <!-- Aqui você pode adicionar uma imagem -->
+        <img src="img2.JPG"> <!-- Aqui você pode adicionar uma imagem -->
       </div>
       <div class="card">
-        <img src="imag/img3.JPG"> <!-- Aqui você pode adicionar uma imagem -->
+        <img src="img3.JPG"> <!-- Aqui você pode adicionar uma imagem -->
       </div>
     </div>
     <div class="quote-container">
